<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ByFootApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">257450387775476</string>
    
    <!-- Fragments -->
    <string name="saved_fragment">Saved</string>
    <string name="places_fragment">places</string>
    <string name="profile_fragment">profile</string>
    <string name="camera_fragment">camera</string>
    
    <!-- Camera fragment -->
    <string name="camera_capture">Take image</string>
    <string name="camera_capture_new">Take new image</string>
    <string name="camera_save">Save</string>
    <string name="camera_add_place">Add Place</string>
    
    <!-- Profile fragment -->
    <string name="logout">Logout</string>
    
    <!-- SharedPreferences -->
    <string name="sp_name">sharedPreferences</string>
    
    <!-- User -->
	<string name="user_first_name">userFirstName</string>
	<string name="user_last_name">userLastName</string>
	<string name="user_birthday">userBirthday</string>
	<string name="user_id">userId</string>
	
	<!-- Save places -->
	<string name="list_image_content_description">First image connected to this place</string>
	<string name="list_divider_content_description">List divider</string>
	
	<!-- Place fragment -->
	<string name="list_search_hint">Search country or City</string>
	<string name="list_search_button_text">Search</string>
	<string name="list_type_button_text">Type</string>
	<string name="more_results_button_text">More results</string>
	
	<!-- Types activity -->
	<string name="atm_button_text">ATM</string>
	<string name="airport_button_text">Airport</string>
	<string name="cafe_button_text">Cafe</string>
	
	<string name="food_button_text">Food</string>
	<string name="gym_button_text">Gym</string>
	<string name="hospital_button_text">Hospital</string>
	
	<string name="liquor_store_button_text">Liquor</string>
	<string name="movie_theater_button_text">Movies</string>
	<string name="night_club_button_text">Club</string>
	
	<string name="shopping_mall_button_text">Mall</string>
	<string name="taxi_stand_button_text">Taxi</string>
	<string name="zoo_button_text">Zoo</string>
	
	<!-- Place acitivty -->
	<string name="place_button_text">Add Place</string>
	<string name="images_button_text">My images</string>
	<string name="delete_place_button_text">Delete place</string>
	<string name="place_texts">My comments</string>
	<string name="website">www</string>
	<string name="comments">Comments:</string>
	<string name="images">Images</string>
	
	<!-- Images activity -->
	<string name="add_new_image_button_text">Add new image</string>
	<string name="add_image">Add</string>
	
	<!-- Image activity -->
	<string name="remove_image_button_text">Remove image</string>
	<string name="remove_image">Remove</string>
	
	<!-- Text activity -->
	<string name="add_text_button_text">Add comment</string>
	<string name="add_comment">Add</string>
	
	<!-- New text activity -->
	<string name="new_text_title_text">Add new comment</string>
	<string name="new_text_edittext_hint">Comment</string>

</resources>
