<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
		android:id="@+id/camera_image"
		android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:contentDescription="@string/camera_fragment" /> 
	    
	    <Button 
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom|center_horizontal"
	    android:layout_marginBottom="5dp"
	    android:text="@string/camera_capture"
        />
	    
	    <Button 
	        android:id="@+id/camera_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top|right"
	        android:text="@string/camera_save"
	        android:visibility="gone"
	        />
	    
	    
    
</FrameLayout>
    
     
	    
    
