<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_bg_color" >
    
     <fragment
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:name="com.google.android.gms.maps.MapFragment"/>
    
    <RelativeLayout
        android:id="@+id/place_action"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/map"
        >
        
    <Button 
        android:id="@+id/texts_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/place_texts"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:onClick="texts"
        android:visibility="gone"
        android:textSize="12sp"
        android:textColor="@color/white_color"
        android:background="@drawable/shape_button"
        />
        
    <Button 
        android:id="@+id/place_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/place_button_text"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="addPlace"
        android:textSize="12sp"
        android:textColor="@color/white_color"
        android:background="@drawable/shape_button"
        />
    
    <Button 
        android:id="@+id/images_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/images_button_text"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="images"
        android:textSize="12sp"
        android:textColor="@color/white_color"
        android:background="@drawable/shape_button"
        />
    
    <Button 
        android:id="@+id/delete_place_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/delete_place_button_text"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:onClick="deletePlace"
        android:textSize="12sp"
        android:textColor="@color/white_color"
        android:background="@drawable/shape_button"
        />
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_action"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    
    <TextView 
        android:id="@+id/place_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_name"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        />
    
    <TextView 
        android:id="@+id/place_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/place_address"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/comments"
        />
    
    <ImageView 
	    android:id="@+id/list_divider_one"
	    android:layout_height="1dp"
	    android:layout_width="match_parent"
	    android:layout_below="@id/place_comments"
	    android:background="@color/list_divider_color"
	    android:contentDescription="@string/list_divider_content_description"
	    />
	
	<ImageView 
	    android:id="@+id/list_divider_two"
	    android:layout_height="1dp"
	    android:layout_width="match_parent"
	    android:layout_below="@id/list_divider_one"
	    android:background="@color/white_color"
	    android:contentDescription="@string/list_divider_content_description"
	    />
    
    <ListView 
        android:id="@+id/reviews_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_divider_two"
        />
   

</RelativeLayout>
